[gd_scene load_steps=7 format=3 uid="uid://b5aa8bbwpr8mm"]

[ext_resource type="Script" path="res://character_random_selector.gd" id="1_3f8pj"]
[ext_resource type="Script" path="res://dni_information.gd" id="2_m835h"]
[ext_resource type="Script" path="res://DialogueControl.gd" id="3_sps78"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f1eb6"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0e6sb"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_60xdp"]
bg_color = Color(1, 1, 1, 1)

[node name="Character" type="Node2D"]
position = Vector2(570, 330)
script = ExtResource("1_3f8pj")

[node name="CharacterSprite" type="Sprite2D" parent="."]
position = Vector2(-280, -50)
scale = Vector2(0.5, 0.5)

[node name="AcceptButton" type="Button" parent="."]
offset_left = -394.0
offset_top = 193.0
offset_right = -262.0
offset_bottom = 294.0
text = "Pasa"

[node name="RejectButton" type="Button" parent="."]
offset_left = -552.0
offset_top = 198.0
offset_right = -421.0
offset_bottom = 287.0
text = "No pasas"

[node name="ShowRulesButton" type="Button" parent="."]
offset_left = -235.0
offset_top = 195.0
offset_right = -84.0
offset_bottom = 297.0
text = "Mostrar reglas"

[node name="DNIInformation" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -19.0
offset_top = -39.0
offset_right = 535.0
offset_bottom = 287.0
script = ExtResource("2_m835h")

[node name="ColorRect" type="ColorRect" parent="DNIInformation"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.083
anchor_top = 0.003
anchor_right = 0.917
anchor_bottom = 1.0
offset_left = -0.0179977
offset_top = 0.022
offset_right = -0.0180359
offset_bottom = 1.0
color = Color(0, 0, 0, 1)

[node name="NameLabel" type="Label" parent="DNIInformation"]
layout_mode = 0
offset_left = 200.0
offset_top = 10.0
offset_right = 500.0
offset_bottom = 48.0

[node name="BornDateLabel" type="Label" parent="DNIInformation"]
layout_mode = 0
offset_left = 200.0
offset_top = 50.0
offset_right = 500.0
offset_bottom = 88.0

[node name="DueDateLabel" type="Label" parent="DNIInformation"]
layout_mode = 0
offset_left = 200.0
offset_top = 90.0
offset_right = 500.0
offset_bottom = 128.0

[node name="PhotoSprite" type="Sprite2D" parent="DNIInformation"]
position = Vector2(100, 100)
scale = Vector2(0.2, 0.2)

[node name="CorrectCharacterLabel" type="Label" parent="."]
offset_left = 355.0
offset_top = -312.0
offset_right = 395.0
offset_bottom = -289.0

[node name="IncorrectCharacterLabel" type="Label" parent="."]
offset_left = 353.0
offset_top = -264.0
offset_right = 393.0
offset_bottom = -241.0

[node name="ResultLabel" type="Label" parent="."]
visible = false
offset_left = 211.0
offset_top = -297.0
offset_right = 251.0
offset_bottom = -274.0

[node name="CurrentDateLabel" type="Label" parent="."]
offset_left = -552.0
offset_top = -318.0
offset_right = -396.0
offset_bottom = -295.0
text = "Fecha: 23 / 08 / 2024"

[node name="RulesLabel" type="Label" parent="."]
visible = false
offset_left = -361.0
offset_top = -303.0
offset_right = 326.0
offset_bottom = 142.0
theme_override_styles/normal = SubResource("StyleBoxFlat_f1eb6")

[node name="VerticalBar" type="ProgressBar" parent="."]
offset_left = 516.0
offset_top = -34.0
offset_right = 556.0
offset_bottom = 291.0
theme_override_styles/background = SubResource("StyleBoxFlat_0e6sb")
theme_override_styles/fill = SubResource("StyleBoxFlat_60xdp")
min_value = -100.0
fill_mode = 3
show_percentage = false

[node name="DialogueControl" type="Node" parent="."]
script = ExtResource("3_sps78")

[node name="PlayerDialogueLabel" type="Label" parent="DialogueControl"]
anchors_preset = -1
anchor_left = 0.038
anchor_top = 0.11
anchor_right = 0.082
anchor_bottom = 0.151
offset_left = 0.223999
offset_top = -0.280006
offset_right = 0.535995
offset_bottom = 0.151993

[node name="CharacterDialogueLabel" type="Label" parent="DialogueControl"]
anchors_preset = -1
anchor_left = 0.089
anchor_top = 0.156
anchor_right = 0.161
anchor_bottom = 0.224
offset_left = 0.472
offset_top = -0.0880051
offset_right = 0.527985
offset_bottom = -0.152008
horizontal_alignment = 2

[connection signal="pressed" from="AcceptButton" to="." method="_on_accept_button_pressed"]
[connection signal="pressed" from="RejectButton" to="." method="_on_reject_button_pressed"]
[connection signal="pressed" from="ShowRulesButton" to="." method="_on_show_rules_button_pressed"]
